Update Dockerfile
Updated docker file